modification of github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,6 @@ jobs:
             - name: 📂 Sync files
               uses: SamKirkland/FTP-Deploy-Action@4.0.0
               with:
-                  server: ftp.samkirkland.com
-                  username: myFtpUserName
+                  server: 5u6q7.ftp.infomaniak.com
+                  username: 5u6q7_sim123klm
                   password: ${{ secrets.ftp_password }}
