--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
             - name: 🚚 Get latest code
               uses: actions/checkout@v2.3.2
 
+            - name: 🔨 Build Project
+              run: |
+                  composer install
+
             - name: 📂 Sync files
               uses: SamKirkland/FTP-Deploy-Action@4.0.0
               with:
