--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,17 @@ jobs:
             - name: 🚚 Get latest code
               uses: actions/checkout@v2.3.2
 
+            - name: 🔨 Build Project
+              run: |
+                  composer install
+
             - name: 📂 Sync files
               uses: SamKirkland/FTP-Deploy-Action@4.0.0
               with:
                   server: 5u6q7.ftp.infomaniak.com
                   username: 5u6q7_sim123klm
                   password: ${{ secrets.ftp_password }}
+                  exclude: .git*
+                      - .git*/**
+                      - var/*
+                      - var/**
