modification of github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,5 @@ jobs:
                       - .git*/**
                       - var/*
                       - var/**
+                      - vendor/*
+                      - vendor/**
