modification of github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,7 @@ jobs:
                       - .git*/**
                       - var/*
                       - var/**
+                      - var*/**
                       - vendor/*
                       - vendor/**
+                      - vendor*/**
