hidding bottom menu

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,8 @@ jobs:
                       - var/*
                       - var/**
                       - var*/**
+                      - var**/*
                       - vendor/*
                       - vendor/**
                       - vendor*/**
+                      - vendor/**/*
