modification of github workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,12 +13,8 @@ jobs:
                   composer install
 
             - name: 📂 Sync files
-              uses: kevinpainchaud/simple-ftp-deploy-action@v1.2.1
+              uses: SamKirkland/FTP-Deploy-Action@4.0.0
               with:
-                  ftp_host: 5u6q7.ftp.infomaniak.com
-                  ftp_username: 5u6q7_sim123klm
-                  ftp_password: ${{ secrets.ftp_password }}
-                  local_source_dir: ""
-                  dist_target_dir: ""
-                  delete: "false"
-                  exclude: "'^logs/' '^README.md'"
+                  server: 5u6q7.ftp.infomaniak.com
+                  username: 5u6q7_sim123klm
+                  password: ${{ secrets.ftp_password }}
