modification on camera part

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,4 +21,4 @@ jobs:
 
             - name: 🔨 Last Project
               run: |
-                  composer install
+                  composer update
